--- a/cesiumClientWeb/index.html
+++ b/cesiumClientWeb/index.html
@@ -8,6 +8,37 @@
     <script src="scripts/Cesium/Cesium.js"></script>
     <link rel="stylesheet" href="scripts/Cesium/Widgets/widgets.css" />
     <script src="./script.js" defer></script>
+    <style>
+       * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            position: relative;
+            width: 100vw;
+            height: 100vh;
+        }
+
+        .cesium-viewer-toolbar, .cesium-widget-credits, .cesium-viewer-fullscreenContainer {
+            display: none !important;
+        }
+
+        #layerIcon {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 100px;
+            height: 100px;
+            z-index: 10;
+        }
+
+        #cesiumContainer{
+            width: 100%;
+            height:100%;
+        }
+    </style>
 </head>
 <body>
     <div id="cesiumContainer"></div>
