--- a/cesiumClientWeb/index.html
+++ b/cesiumClientWeb/index.html
@@ -7,6 +7,7 @@
     <title>Raster Example</title>
     <script src="scripts/Cesium/Cesium.js"></script>
     <link rel="stylesheet" href="scripts/Cesium/Widgets/widgets.css" />
+    <link rel="stylesheet" href="public/fonts/mc-icons/style.css" />
     <script src="./script.js" defer></script>
     <style>
        * {
@@ -29,8 +30,7 @@
             position: absolute;
             top: 20px;
             left: 20px;
-            width: 100px;
-            height: 100px;
+            font-size: 8rem;
             z-index: 10;
         }
 
