feat: add turf, try to figure out zoom level and center of the bbox

--- a/cesiumClientWeb/index.html
+++ b/cesiumClientWeb/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raster Example</title>
     <script src="scripts/Cesium/Cesium.js"></script>
+    <script src="scripts/turf/turf.min.js"></script>
     <link rel="stylesheet" href="scripts/Cesium/Widgets/widgets.css" />
     <link rel="stylesheet" href="public/fonts/mc-icons/style.css" />
     <script src="./script.js" defer></script>
