--- a/cesiumClientWeb/index.html
+++ b/cesiumClientWeb/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raster Example</title>
+    <title>Thumbnail Presentor</title>
     <script src="scripts/Cesium/Cesium.js"></script>
     <script src="scripts/turf/turf.min.js"></script>
     <link rel="stylesheet" href="scripts/Cesium/Widgets/widgets.css" />
@@ -29,9 +29,11 @@
 
         #layerIcon {
             position: absolute;
-            top: 20px;
-            left: 20px;
-            font-size: 5rem;
+            top: 3vw;
+            left: 3vw;
+            font-size:calc(12px + 3vw);
+            color:white;
+            filter: drop-shadow(0 0 0.5rem rgb(0 0 0));
             z-index: 10;
         }
 
